# dotli-community

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  agents.toml  app.html  deploy.env.example  dotli.adoc  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  turbo.json  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
deploy/: nginx.k8s.conf
docs/: AGENTS.md  environments.md  resolution-design.md  smoldot.md
local_gateway/: Caddyfile  README.md  docker-compose.yml  setup.sh  start.sh  stop.sh
nginx/: nginx.conf  nginx.conf.template  nginx.dev-paseo  nginx.dev-polkadot  nginx.dev-test  nginx.dev-westend  nginx.dotlidev  nginx.paseo  nginx.paseoli  nginx.paseolidev  nginx.polkadot  nginx.summit  nginx.westend  sentry-tunnel.conf
patches/: @novasamatech%2Fhost-papp@0.8.5.patch
public/: _headers  dot-metadata.json  host-metadata.json  sw.js
scripts/: compress-dist.ts  preview-server.ts  set-version.ts  update-chain-specs.sh  update-metadata.sh
src/: abi.ts  account.ts  app-main.ts  app-sw.ts  archive.ts  auth.ts  build-target.d.ts  chains.ts  cid-cache.ts  config.ts  container.ts  db.ts  dotli-sw.ts  fetch.ts  gateway-resolve.ts  host-sw.ts  log.ts  sw.ts  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+130 files in other folders)
