[package]
name = "dotli-desktop"
version = "0.1.0"
description = "dot.li desktop — a decentralized web browser for Polkadot"
authors = ["Parity Technologies <admin@parity.io>"]
license = "AGPL-3.0"
repository = "https://github.com/paritytech/dotli"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dotli_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
ureq = "3"

# Smoldot light client (Rust-native, replaces JS smoldot in Tauri)
smoldot-light = { version = "0.19", default-features = true }
smol = "2"

# host-rs crates (pinned to specific commit — update intentionally)
host-chain = { git = "ssh://git@github.com/paritytech/host-sdk.git", rev = "64262c4" }
host-wallet = { git = "ssh://git@github.com/paritytech/host-sdk.git", rev = "64262c4" }

[dev-dependencies]
tempfile = "3"

# Local path override for development — points to host-sdk cloned as sibling of dotli
[patch."ssh://git@github.com/paritytech/host-sdk.git"]
host-chain = { path = "../../../../host-sdk/crates/host-chain" }
host-wallet = { path = "../../../../host-sdk/crates/host-wallet" }
